Use compatible stream collection in rhythm reconciliation